# hardy

./: .gitignore  README.md  _CoqProject  arduino.opam  arduino.opam.template  dune-project  dune-workspace  hardy.opam  pltl.mlw
coq/: Makefile.conf  _CoqProject  dune
coq/theories/: .automaton.aux  .product.aux  .util.aux  .verification.aux  automaton.v  dune  product.v  util.v  verification.v
doc/: dune  index.mld
etc/: fol.mlw
examples/: .gitignore  Readme.md  arbiter_circuit2.hd  bip.hd  constant.hd  constant_tuple.hd  delay2_int.hd  delay_array.hd  delay_bool.hd  delay_int.hd  guesser.hd  light.hd  max.hd  metronome.hd  nd_spec.hd  nd_spec2.hd  product_simplification.hd  register_v1.hd  register_v2.hd  ressource_manager.hd  rising_edge.hd  stopwatch.hd  test.file  test.hd  traffic_light.hd  vending_machine.hd  write_only.hd
examples/LTL/: alternating.hd  arbiter_circuit1.hd  arbiter_circuit2.hd  bip.hd  bip_spec_only.hd  buffer.hd  constant.hd  cycle_1.hd  cycle_2.hd  delay2_int.hd  delay_bool.hd  delay_int.hd  fibo.hd  guesser.hd  max.hd  metronome.hd  mult.hd  mutex.hd  nd_single_step.hd  nd_spec.hd  nd_spec2.hd  nd_spec4.hd  register_v1.hd  register_v2.hd  rising_edge.hd  write_only.hd
examples/LTL/Kairos Comparison/: ack_cycle_1.hd  ack_cycle_2.hd  armed_once_forever.hd  armed_once_forever_KO.hd  r_mode_gate.hd  require_always_one.hd
examples/LTL/Past Quantification/: prev_exists.hd  validator.hd
examples/LTL/Temporal Assumptions/: bad_assume.hd  bip.hd  bip_spec_only.hd
examples/LTL/fd/: mutex.hd  prev_exists.hd
examples/LTL/old_implem/: delay2.mlw  max.mlw  mean.mlw  sum.mlw
examples/Past Quantification/: buffer.hd  mutex.hd  prev_exists.hd  validator.hd
examples/Temporal Assumptions/: arbiter_circuit1.hd  arbiter_circuit2.hd  bip.hd  guesser.hd  light.hd  product_simplification.hd
examples/WIP/: alarm.hd  arbiter_circuit1.hd  arbiter_circuit2.hd  autopilot.hd  bakery.hd  bip_spec_only_ppltl.hd  cycle_2.hd  delay_int_forall.hd  even_ko.hd  guesser.hd  loadcomp2.tlsf.hd  max.hd  metronome_any_beat.hd  new_types.hd  password.hd  prev_exists.hd  product_simplification.hd  switch.hd  test2.hd
examples/WIP/Liveness/: liveness.hd  nd_dimitrova.hd  nd_spec3.hd
examples/delay_bool_gen/: delay_bool.hd.mlw  guarantee.dot  guarantee.never  product.dot  rely.dot
examples/failure/: delay.mlw  onoff.mlw  switch.mlw  trad.mlw  trad3.mlw
examples/failure/delay/: delay_FOL_at_time_range_1.v  why3session.xml
examples/failure/delay_fd/: why3session.xml
examples/failure/switch/: #switch_Top_mainqtvc_1.v#  #switch_Top_mainqtvc_3.v#  switch_Top_mainqtvc_2.v  why3session.xml
examples/failure/trad/: why3session.xml
examples/failure/trad3/: why3session.xml
examples/fd/: buffer.hd  validator.hd
examples/light_gen/: guarantee.dot  guarantee.never  light.hd.mlw  product.dot  rely.dot  rely.never
examples/ltl/: on.mlw  on2.mlw  on3.mlw  on3.mlw.old  on4.mlw  onoff.mlw
examples/ltl/on/: README.md  on.mlw  why3session.xml
examples/ltl/on2/: why3session.xml
examples/ltl/on3/: why3session.xml
examples/ltl/on4/: why3session.xml
examples/ltl/onoff/: README.md  io.dot  onoff4.mlw  why3session.xml
examples/manual_translation/: delay_int.mlw
examples/metronome_gen/: guarantee.dot  guarantee.never  metronome.hd.mlw  product.dot  rely.never
examples/old_implem/: delay.mlw  delay3.mlw  register.mlw  sort.mlw
examples/old_implem/delay/: #delay_Top_delayqtvc_1.v#  why3session.xml
examples/old_implem/delay3/: #delay3_Top_delay3qtvc_1.v#  delay3_Top_delay3qtvc_2.v
examples/ppLTL/: alarm.hd  azzopardi.hd  bip.hd  bip_spec_only.hd  cycle.hd  delay_int.hd
examples/success/: constant.mlw  delay_fd.mlw  incr.mlw  natural.mlw  onoff.mlw  register.mlw  trad2.mlw  trad4.mlw
gen_test/: on.ltl  onoff.ltl  test.ltl
lib/back_end/: backSig.ml  backSig.mli  dune  sig.ml
lib/front_end/: cli.ml  cli.mli  dune  frontSig.ml  frontSig.mli  interpreter.ml  ltl_typing.ml  ltl_typing.mli  parsing.ml  pltl_typing.ml  pltl_typing.mli  printer.ml  printer.mli  syntax.ml  typing.ml
lib/front_end/parser/: dune  lexer.mll  program.ml  sharedSyntax.ml  sharedSyntax.mli  tokens.mly
lib/front_end/parser/program/: common.mly  ltl_spec.ml  ltl_spec.mly  parser.mly  pltl_spec.ml  pltl_spec.mly  program.ml  programSyntax.ml  programSyntax.mli  types.mli
lib/front_end/parser/program/ltl/: ltl_spec.ml  ltl_spec.mly
lib/front_end/parser/program/ppltl/: ppltl_spec.ml  ppltl_spec.mly
lib/front_end/parser/specification/: FOLSyntax.ml  FOLSyntax.mli  LTLSyntax.ml  LTLSyntax.mli  PLTLSyntax.ml  PpLTLSyntax.ml  PpLTLSyntax.mli  instantSyntax.ml  instantSyntax.mli  ltl.mly  parser.mly  pltl.mly  ppltl.mly
lib/middle_end/: atom.ml  atom.mli  dune  midSig.ml  sig.ml
lib/middle_end/buchi/parser/: dune  ncLexer.mll  ncParser.mly  ncSyntax.ml
lib/middle_end/buchi/parser/hoa/: hoaParser.mly  hoaParsing.ml  hoaSyntax.ml
lib/middle_end/buchi/parser/neverclaim/: ncSyntax.ml
lib/misc/: dune  utils.ml  utils.mli  why3Utils.ml
lib/parsing/: dune  fol.mly  lexer.mll  ltl.mly  neverclaim.mly  neverclaimlex.mll  parser.mly  parsing.ml  pltl.mly  tokens.mly
lib/parsing/buchi/: dune  lexer.mll  parser.mly  parsing.ml
lib/syntax/: PromelaSyntax.ml  automaton.ml  automatonSyntax.ml  dune  fol.ml  locations.ml  ltl.ml  operators.ml  printer.ml  syntax.ml  types.ml
lib/translation/: automaton.ml  bucchi.ml  dune  generation.ml  ltl2ba.ml  ltl2buchi.ml  translate.ml  translateFOL.ml  translateLTL.ml  translateUtils.ml  translation.ml  utils.ml  why3gen.ml
lib/why3/: dune  printer.ml  syntax.ml
rocq/theories/: _RocqProject  automaton.v  dune  product.v  rocq_nackup.v  triples.v  verification.v
samples/: onoff.mlw.bak  test.file  trad.mlw.bak  trad2.mlw.bak  trad3.mlw.bak  trad4.mlw.bak
samples/onoff/: why3session.xml  why3session.xml.bak  why3shapes.gz.bak
samples/test/: dune
samples/trad/: why3session.xml.bak
samples/trad2/: why3session.xml.bak  why3shapes.gz.bak
samples/trad3/: why3session.xml.bak
samples/trad4/: why3session.xml.bak
(+105 files in other folders)
