(library 
  (name arduinoParser)
  (libraries arduinoSyntax zarith menhirLib))

(ocamllex lexer)


; tokens shared across the parsers
(menhir
  (modules tokens)
  (flags --only-tokens)
)


(menhir
  (modules tokens fol parser)
  (merge_into fol_parser)
  (flags
    --external-tokens Tokens
    --unused-token HISTORICALLY
    --unused-token ONCE
    --unused-token SINCE
    --unused-token YESTERDAY
    --unused-precedence-levels
  )
)

(menhir
  (modules tokens pltl parser)
  (merge_into pltl_parser)
  (flags --external-tokens Tokens)
)