(library
 (name hardyParser)
 (public_name hardy.parser)
 (libraries
  hardySyntax
  menhirLib
  (re_export baParser)))

(ocamllex lexer)

; tokens shared across the parsers

(menhir
 (modules tokens)
 (flags --only-tokens))

; BASE + FOL
;(menhir
;  (modules tokens fol parser)
;  (merge_into fol_parser)
;  (flags
;    --external-tokens Tokens
;    --unused-tokens
;    --unused-precedence-levels
;  )
;)

; LTL

(menhir
 (modules tokens ltl parser)
 (merge_into ltl_parser)
 (flags --external-tokens Tokens --unused-tokens --unused-precedence-levels))

; PLTL

; (menhir
;  (modules tokens pltl parser)
;  (merge_into pltl_parser)
;  (flags --external-tokens Tokens --unused-tokens --unused-precedence-levels))
