(include_subdirs unqualified)

(ocamllex lexer)

; tokens shared across the parsers

(menhir
 (modules tokens)
 (flags --only-tokens))

(menhir
 (modules tokens specification/ltl program/parser)
 (merge_into pgrmParser)
 (flags
  --external-tokens Tokens
  ; --strict
  --explain))

(library
 (name frontParser)
 (public_name hardy.front_parser)
 (libraries str hardyMisc menhirLib))
