(include_subdirs unqualified)

(ocamllex lexer)

; tokens shared across the parsers

(menhir
 (modules tokens)
 (flags --only-tokens))

(menhir
 (modules tokens specification/ltl specification/pltl program/ppltl/ppltl_spec program/common)
 (merge_into pgrmPltlParser)
 (flags
  --external-tokens Tokens
  --unused-token SYMB_AT --unused-token DOLLAR  --unused-token SHARP
  --unused-token UNDERSCORE  
  --unused-token HAT --unused-token QMARK 
  --unused-token ALL --unused-token ANY --unused-token AT 
  --unused-token PREV --unused-token LAST  --unused-token AS
  --unused-token EXISTS_PREV
  --unused-token FORALL_PREV
  --unused-token FIRST
  --unused-token START
  --strict
  --explain))

(menhir
 (modules tokens specification/ltl program/ltl/ltl_spec program/common)
 (merge_into pgrmLtlParser)
 (flags
  --external-tokens Tokens
  --unused-token HAT --unused-token QMARK 
  --unused-token UNDERSCORE  
  --unused-token ALL --unused-token ANY --unused-token AT 
  --unused-token ONCE 
  --unused-token YESTERDAY 
  --unused-token HISTORICALLY 
  --unused-token WEAK_YESTERDAY
  --unused-token WEAK_SINCE
  --unused-token SINCE 
  --unused-precedence-levels
  --strict
  --explain))

(library
 (name frontParser)
 (public_name hardy.front_parser)
 (libraries str hardyMisc menhirLib)
 (modules_without_implementation types))
