(include_subdirs unqualified)

(rule
 (target ncLexer.ml)
 (deps  neverclaim/ncLexer.mll)
 (action (chdir %{workspace_root}
          (run %{bin:ocamllex} -q -o %{target} %{deps}))))

(rule
 (target hoaLexer.ml)
 (deps  hoa/hoaLexer.mll)
 (action (chdir %{workspace_root}
          (run %{bin:ocamllex} -q -o %{target} %{deps}))))

(menhir
 (modules neverclaim/ncParser)
  (merge_into ncParser))

(menhir
 (modules hoa/hoaParser)
  (merge_into hoaParser))

(library
 (name middleParser)
 (public_name hardy.middleParser)
 (libraries hardyFrontEnd menhirLib))
